# pictophone-be

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  cloudrun.sh  docker-compose.yml  envoy.yaml  genmodel.sh  package-lock.json  package.json
api/: Cargo.toml
api/src/: lib.rs  v1_0.rs  v1_1.rs
be/: Dockerfile  cloudrun.sh  cors.json  package-lock.json  package.json
be/src/: base.ts  batch.ts  config.ts  exports.ts  history.ts  history.v1.1.0.ts  index.ts  index_orig.ts  inspect.sh  projection.ts  sample_data.ts  setupdb.ts  types.ts  types.validator.ts  util.ts
be/src/braid/: braid.ts  log.ts  log.validator.ts
be/src/exports/: 0-0.ts  0-v1.0.0.ts  0-v1.1.0.ts  index.ts
be/src/logic/: 0.ts  index.ts
be/src/model/: Action.ts  Action.validator.ts  Action0.ts  Action1_1_0.ts  Export.ts  Export.validator.ts  Export0.ts  Export1.0.0.ts  Export1_0_0.ts  Export1_1_0.ts  Export1_2_0.ts  State.ts  State.validator.ts  State0.ts  Upload.validator.ts  UploadResponse.validator.ts  base.ts  rpc.validator.ts
be/src/proto/: 1.0.0.ts  1.0.0.validator.ts
binaries/: v0.1.0.wasm  v1.0.0.wasm
cloudbuild/: deploy.yaml
config/envoy/: Dockerfile  envoy.yaml
config/grpcwebproxy/: Dockerfile
config/server/: Dockerfile  envoy.yaml  prod.toml  start.sh
config/server-deps/: Dockerfile
doltc/: Cargo.toml
doltc/src/: main.rs
fe/: .env.development  .env.production  cpmodel.sh  cptypes.sh  package.json
fe/src/: App.tsx  Canvas.tsx  Drawer.tsx  Drawing.tsx  GameView.tsx  Home.tsx  base.ts  config.ts  firestore.d.ts  index.css  types.ts  types.validator.ts
fe/src/model/: Action.ts  Action.validator.ts  Export.ts  Export.validator.ts  Export0.ts  Export0.validator.ts  Export1_1_0.ts  Export1_1_0.validator.ts  Upload.ts  Upload.validator.ts  UploadResponse.ts  UploadResponse.validator.ts  base.ts  rpc.validator.ts
logic/: Cargo.toml  build.rs
logic/src/: main.rs  proto.rs
logic/test/: create.yaml
proto/: Cargo.toml  dolt.proto  helloworld.proto  pictophone.proto
proto/pictophone/: dolt.proto  logic.proto  v0_1.proto  v1_0.proto  v1_1.proto  versioned.proto
proto/src/: lib.rs
prototype/: Cargo.toml  build.rs
prototype/proto/pictophone/: backup.proto  v1_0.proto
prototype/src/: main.archive.rs  main.rs  protobuf.rs  runner.rs
prototype/src/binaries/: v1.0.0.wasm  v1.1.0.wasm
schemac/: Cargo.toml
schemac/src/: main.rs  schema.yaml
serde_firestore/: Cargo.toml
serde_firestore/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: auth.rs  binaries.rs  config.rs  datastore.rs  db.rs  firestore_values.rs  main.rs  proto.rs  protobuf.rs  runner.rs  util.rs
server/src/binaries/: v1.0.0.wasm
server/src/util/: aovec.rs  mod.rs
src/: actions.ts  base.ts  batch.ts  bindings.ts  collections.ts  config.ts  db.ts  diffs.ts  exports.ts  firestore_values.rs  framework.ts  index.ts  interfaces.ts  log.ts  logic.rs  main.rs  option.ts  projection.ts  projection.v2.0.0.ts  projectors.ts  proto.rs  ranges.ts  readables.ts  rev0.ts  rev1.ts  sample_data.ts  schema.auto.ts  schema.manual.ts  schema.ts  types.ts  types.validator.ts  util.ts
src/attic/: batch.ts  bindings.ts  collections.ts  index.ts
src/attic/flow/: ops.ts  util.ts
src/attic/framework/: base.ts  db.ts  read.ts
src/flow/: base.ts  comparison.ts  ops.ts  range.ts  read.ts  util.ts
src/framework/: base.ts  collections.ts  comparison.ts  db.ts  framework.test.ts  graph.ts  graph_builder.ts  incremental.ts  inmem.ts  lowlevel.ts  range.ts  read.ts  revision.ts
src/framework/__snapshots__/: framework.test.ts.snap
src/logic/: 0.ts  1.1.1.ts  1.2.0.ts  index.ts  v1.1.0.ts  v1.2.0.ts  v1.3.0.ts
src/model/: 1.0.ts  1.0.validator.ts  1.1.1.ts  1.1.1.validator.ts  1.1.ts  1.1.validator.ts  1.2.0.ts  1.2.0.validator.ts  1.2.ts  1.2.validator.ts  Action.validator.ts  Action0.ts  Action1_2_0.ts  AnyAction.ts  AnyAction.validator.ts  AnyExport.ts  AnyState.ts  AnyState.validator.ts  Export.ts  State.validator.ts  State0.ts  State1_1_0.ts  State1_2_0.ts  base.ts  base.validator.ts  index.ts  index.validator.ts  rpc.ts  rpc.validator.ts  validator.ts
src/model/v0/: Action.ts  Export.ts  State.ts  index.ts
src/model/v1.0/: Action.ts  Export.ts  State.ts  index.ts  logic.ts
src/model/v1.0.0/: Export.ts
src/model/v1.1/: Action.ts  Export.ts  State.ts  index.ts  logic.ts
src/model/v1.1.0/: Action.ts  Export.ts  State.ts  index.ts
src/model/v1.2.0/: Action.ts  Export.ts  State.ts  index.ts
src/model/v1.3.0/: Action.ts  Export.ts  State.ts  index.ts
src/reducers/: history.ts
src/schema/: auto.ts  index.ts  interfaces.ts  interfaces.validator.ts  manual.ts  schema.yaml
src/types/: Action.ts  Action.validator.ts  history.ts  history.validator.ts  log.ts  log.validator.ts
src/util/: defaultable.ts  index.ts  option.ts  result.ts
