[package]
name = "be2"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
firestore = { version = "0.1", package = "firestore_grpc_cloudrun" }

[build-dependencies]
tonic-build = "0.2"