[package]
name = "be2"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.2", features = ["transport", "tls", "tls-roots"]}
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
gcp_auth = "0.1.4"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.13"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.2"