[package]
name = "doltc"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
prost-build = "0.6"
quote = "1.0.8"
tonic-build = "0.3.1"
