[package]
name = "logic"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version= "1.0.115", features = ["derive"]}
serde_json = "1.0.59"
anyhow = "1.0.34"
prost = "0.6"
prost-types = "0.6"
paste = "1.0.4"
thiserror = "1.0.23"
rand = "0.8.2"

[build-dependencies]
prost-build = "0.6"
