[package]
name = "proto"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde = {version= "1.0.115", features = ["derive"]}
serde_json = "1.0.59"
