[package]
name = "prototype"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
sled = "0.34.6"
anyhow = "1.0.34"
tempfile = "3.1.0"
serde = {version= "1.0.115", features = ["derive"]}
serde_json = "1.0.59"
proto = { path = "../proto" } 
# wasmtime = "0.21.0"
