[package]
name = "prototype"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
sled = "0.34.6"
anyhow = "1.0.34"
tempfile = "3.1.0"
serde = {version= "1.0.115", features = ["derive"]}
serde_json = "1.0.59"
# api = { path = "../api" } 
wasmtime = "0.21.0"
wasmtime-wasi = "0.21.0"
wasi-common = "0.21.0"
bytes = "0.6.0"
tonic = { version = "0.2", features = ["transport", "tls", "tls-roots"]}
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }
thiserror = "1.0.22"

[build-dependencies]
tonic-build = "0.2"
