[package]
name = "serde_firestore"
version = "0.1.0"
authors = ["Hunter Freyer <yt@hjfreyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
googapis = { version = "0.2", features = ["google-firestore-v1"] }
serde = { version ="1.0.118", features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
maplit = "1.0.2"
